samples/_failures_safe/1761535814_434f3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdfd508e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_bdfd508e.c:182:26: error: expected ‘)’ at end of input
  182 |             (*token_count
      |             ~            ^
      |                          )
./samples/SAFE/__tmp_bdfd508e.c:182:13: error: expected declaration or statement at end of input
  182 |             (*token_count
      |             ^
./samples/SAFE/__tmp_bdfd508e.c:182:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bdfd508e.c:182:13: error: expected declaration or statement at end of input
